--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-youtube": "^10.0.0",
     "swiper": "^8.4.2",
     "vercel": "^28.4.12"
   },
