--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-hook/intersection-observer": "^3.1.1",
     "firebase": "^9.10.0",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.0",
     "react-youtube": "^10.0.0",
     "swiper": "^8.4.2",
     "vercel": "^28.4.12"
